hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
File "splice_err2.php", line 9, characters 17-21:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 183, characters 35-44:
  Expected `ExampleInt`
  File "expr_tree.hhi", line 35, characters 32-44:
  But got `ExampleString`
  File "expr_tree.hhi", line 155, characters 44-49:
    via this generic `TInfer`
